--- a/main.css
+++ b/main.css
@@ -120,6 +120,10 @@ a[class="menu"] {
     padding-bottom: 5px;
 }
 
+li[class="current"] {
+    border-radius: 10px;
+}
+
 h3 {
     color:var(--text);
 }
