--- a/main.css
+++ b/main.css
@@ -103,6 +103,9 @@ li[class="ui-tabs-tab ui-corner-top ui-state-default ui-tab ui-tabs-active ui-st
     border-radius: 5px;
     font-weight: 1000;
 }
+p[class="ejudge_copyright"] {
+    background: var(--base) !important;
+}
 a[id="ui-id-1"] {
     background: var(--blue) !important;
     color: var(--mantle) !important;
